--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ rignore==0.6.2
 sentry-sdk==2.33.0
 shellingham==1.5.4
 sniffio==1.3.1
+SQLAlchemy==2.0.43
 starlette==0.47.1
 typer==0.16.0
 typing-inspection==0.4.1
