--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ certifi==2025.7.14
 click==8.2.1
 dnspython==2.7.0
 email_validator==2.2.0
+Faker==37.12.0
 fastapi==0.116.1
 fastapi-cli==0.0.8
 fastapi-cloud-cli==0.1.4
+greenlet==3.2.4
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
@@ -33,6 +35,7 @@ starlette==0.47.1
 typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.35.0
 uvloop==0.21.0
