--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,9 @@ Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+psycopg2-binary==2.9.11
 pydantic==2.11.7
+pydantic-settings==2.13.1
 pydantic_core==2.33.2
 Pygments==2.19.2
 python-dotenv==1.1.1
